--- a/MetroUIPrueba2/Areas/Gerencia/Views/Proveedor/View.cshtml
+++ b/MetroUIPrueba2/Areas/Gerencia/Views/Proveedor/View.cshtml
@@ -1,5 +1,6 @@
-﻿@{
-    ViewBag.Title = "Intranet";
+﻿@model MetroUIPrueba2.Models.Proveedor
+@{
+    ViewBag.Title = "View";
     Layout = "~/Areas/Gerencia/Views/Shared/_IntranetLayoutGerencia.cshtml";
 }
 
@@ -16,7 +17,7 @@
     }
 
     .user_session {
-        margin-top:20px;
+        margin-top: 60px;
         margin-left: 5px;
         width: 300px;
         position: relative;
@@ -42,7 +43,7 @@
         <div class="row mb-2">
             <label class="cell-sm-3">Razón:</label>
             <div class="cell-sm-9">
-                <input type="text" value="Empresa de Pinturas S.A" data-role="input"
+                <input type="text" value="@Model.Razon" data-role="input"
                        class="mb-1"
                        data-prepend="<span class='mif-shop'></span>"
                        readonly>
@@ -51,7 +52,7 @@
         <div class="row mb-2">
             <label class="cell-sm-3">Rut:</label>
             <div class="cell-sm-4">
-                <input type="text" data-role="input" value="65.897.345-k" class="mb-1"
+                <input type="text" data-role="input" value="@Model.Rut" class="mb-1"
                        data-prepend="<span class='mif-indent-increase'></span>" readonly>
             </div>
         </div>
@@ -59,7 +60,7 @@
         <div class="row mb-2">
             <label class="cell-sm-3">Dirección:</label>
             <div class="cell-sm-9">
-                <input type="text" value="Los Avellanos # 675" data-role="input"
+                <input type="text" value="@Model.Direccion" data-role="input"
                        class="mb-1"
                        data-prepend="<span class='mif-steps'></span>"
                        readonly>
@@ -69,7 +70,7 @@
         <div class="row mb-2">
             <label class="cell-sm-3">Teléfono:</label>
             <div class="cell-sm-4">
-                <input type="text" value="+56 9 86754532" data-role="input"
+                <input type="text" value="@Model.Telefono" data-role="input"
                        class="mb-1"
                        data-prepend="<span class='mif-phone'></span>"
                        readonly>
@@ -78,41 +79,31 @@
         <div class="row mb-2">
             <label class="cell-sm-3">Email:</label>
             <div class="cell-sm-9">
-                <input type="email" value="ep@email.com" data-role="input"
+                <input type="email" value="@Model.Email" data-role="input"
                        class="mb-1"
                        data-prepend="<span class='mif-envelop'></span>"
                        readonly>
             </div>
         </div>
         <div class="row mb-2">
-            <label class="cell-sm-3">Categoria:</label>
+            <label class="cell-sm-3">Contacto:</label>
             <div class="cell-sm-6">
-                <input type="text" value="Pinturas" data-role="input"
+                <input type="text" value="@Model.Contacto" data-role="input"
                        class="mb-1"
                        data-prepend="<span class='mif-stack2'></span>"
                        readonly>
             </div>
         </div>
         <div class="row mb-2">
-            <label class="cell-sm-3">Región:</label>
-            <div class="cell-sm-6">
-                <input type="text" value="Metropolitana" data-role="input"
-                       class="mb-1"
-                       data-prepend="<span class='mif-earth2'></span>"
-                       readonly>
-            </div>
-        </div>
-        <div class="row mb-2">
             <label class="cell-sm-3">Comuna:</label>
             <div class="cell-sm-6">
-                <input type="text" value="Providencia" data-role="input"
+                <input type="text" value="@Model.Comuna" data-role="input"
                        class="mb-1"
-                       data-prepend="<span class='mif-earth'></span>"
+                       data-prepend="<span class='mif-earth2'></span>"
                        readonly>
             </div>
         </div>
     </form>
 
 </div>
-
 
