--- a/MetroUIPrueba2/Areas/Gerencia/Views/Shared/_IntranetLayoutGerencia.cshtml
+++ b/MetroUIPrueba2/Areas/Gerencia/Views/Shared/_IntranetLayoutGerencia.cshtml
@@ -40,8 +40,8 @@
                 <a href="#" class="dropdown-toggle"><span class="mif-stack icon"></span> Insumos</a>
                 <div class="mega-container" data-role="dropdown">
                     <ul class="h-menu">
-                        <li><a href="@Url.Action("Index","Insumo")"><span class="mif-zoom-in icon"></span> Ver Insumos</a></li>
-                        <li><a href="@Url.Action("Inventario","Insumo")"><span class="mif-database"></span>Inventario</a></li>
+                        <li><a href="@Url.Action("Index","Recurso")"><span class="mif-zoom-in icon"></span> Ver Insumos</a></li>
+                        <li><a href="@Url.Action("Inventario","Recurso")"><span class="mif-database"></span>Inventario</a></li>
                     </ul>
                 </div>
             </li<span class="mif-database"></span>
