--- a/MetroUIPrueba2/Areas/Produccion/Views/Shared/_IntranetLayoutInsumos.cshtml
+++ b/MetroUIPrueba2/Areas/Produccion/Views/Shared/_IntranetLayoutInsumos.cshtml
@@ -15,7 +15,7 @@
         }
         div.mega-container{
             display:inline-block;
-            min-width:400px;
+            min-width:700px;
         }        
     </style>
 </head>
@@ -41,10 +41,9 @@
                 <a href="#" class="dropdown-toggle"><span class="mif-stack icon"></span> Insumos</a>
                 <div class="mega-container" data-role="dropdown">
                     <ul class="h-menu">
-                        <li><a href="@Url.Action("Index","Insumo")"><span class="mif-zoom-in icon"></span> Ver Insumos</a></li>
-                        <li><a href="@Url.Action("Editar","Insumo")">Editar Insumo</a></li>
-                        <li><a href="@Url.Action("Ver","Insumo")">Ver Detalle Insumo</a></li>
-                        <li><a href="@Url.Action("Inventario","Insumo")">Inventario</a></li>
+                        <li><a href="@Url.Action("Index","Recurso")"><span class="mif-zoom-in icon"></span> Ver Insumos</a></li>                       
+                        <li><a href="@Url.Action("View","Recurso")">Ver Detalle Insumo</a></li>
+                        <li><a href="@Url.Action("Inventario","Recurso")">Inventario</a></li>
                     </ul>
                 </div>
             </li>
