--- a/MetroUIPrueba2/Areas/Gerencia/Views/Empleado/Create.cshtml
+++ b/MetroUIPrueba2/Areas/Gerencia/Views/Empleado/Create.cshtml
@@ -1,5 +1,6 @@
-﻿@{
-    ViewBag.Title = "Intranet";
+﻿@model MetroUIPrueba2.Models.Empleado
+@{
+    ViewBag.Title = "Create";
     Layout = "~/Areas/Gerencia/Views/Shared/_IntranetLayoutGerencia.cshtml";
 }
 
@@ -8,50 +9,53 @@
         width: 800px;
         height: 600px;
         top: 50%;
-        margin-top: 20px;
+        margin-top: 55px;
         border: 1px solid green;
         padding-top: 10px;
         padding-left: 60px;
         position: relative;
     }
-
-    .user_session {
-        margin-top: 3px;
-        margin-left: 5px;
-        width: 300px;
-        position: relative;
-        color: blue;
-    }
-
-        .user_session h6 {
-            color: blue;
-        }
 </style>
-<div class="user_session">
-    <h6>Usuario: Juan Perez</h6>
-</div>
-
-
-
 
 <div class="container" id="principal">
     <h3>Nuevo Empleado</h3>
     <hr />
-    <form class="bg-white p-6 mx-auto border bd-default win-shadow">
+    <form class="bg-white p-6 mx-auto border bd-default win-shadow" method="POST" action="@Url.Action("Create","Empleado")">
         <table>
-            <tr><td style="padding-right:15px;">Rut:</td><td style="padding-top:10px;"><input style="width:400px;" type="text" data-role="input" data-append="#" class="input-lg"></td></tr>
-            <tr><td style="padding-right:15px;">Nombres:</td><td style="padding-top:10px;"><input style="width:400px;" type="text" data-role="input" data-append="#" class="input-lg"></td></tr>
-            <tr><td style="padding-right:15px;">Apellidos:</td><td style="padding-top:10px;"><input style="width:400px;" type="text" data-role="input" data-append="#" class="input-lg"></td></tr>
-            <tr><td style="padding-right:15px;">Dirección:</td><td style="padding-top:10px;"><input style="width:400px;" type="text" data-role="input" data-append="#" class="input-lg"></td></tr>
-            <tr><td style="padding-right:15px;">Teléfono:</td><td style="padding-top:10px;"><input style="width:400px;" type="text" data-role="input" data-append="#" class="input-lg"></td></tr>
-            <tr><td style="padding-right:15px;">Email:</td><td style="padding-top:10px;"><input style="width:400px;" type="text" data-role="input" data-append="#" class="input-lg"></td></tr>
-            <tr><td style="padding-right:15px;">Cargo:</td><td style="padding-top:10px;"><input style="width:400px;" type="text" data-role="input" data-append="#" class="input-lg"></td></tr>
-
+            <tr>
+                <td style="padding-right:15px;">Rut:</td>
+                <td style="padding-top:10px;"><input style="width:400px;" type="text" name="Rut" data-role="input" data-append="#" class="input-lg"> @Html.ValidationMessageFor(model => model.Rut) </td>               
+            </tr>           
+            <tr>
+                <td style="padding-right:15px;">Nombres:</td>
+                <td style="padding-top:10px;"><input style="width:400px;" type="text" name="Nombres" data-role="input" data-append="#" class="input-lg"> @Html.ValidationMessageFor(model => model.Nombres)</td>
+            </tr>            
+            <tr>
+                <td style="padding-right:15px;">Apellidos:</td>
+                <td style="padding-top:10px;"><input style="width:400px;" type="text" name="Apellidos" data-role="input" data-append="#" class="input-lg"> @Html.ValidationMessageFor(model => model.Apellidos) </td>
+            </tr>            
+            <tr>
+                <td style="padding-right:15px;">Dirección:</td>
+                <td style="padding-top:10px;"><input style="width:400px;" type="text" name="Direccion" data-role="input" data-append="#" class="input-lg">  @Html.ValidationMessageFor(model => model.Direccion) </td>
+            </tr>           
+            <tr>
+                <td style="padding-right:15px;">Teléfono:</td>
+                <td style="padding-top:10px;"><input style="width:400px;" type="text" name="Telefono" data-role="input" data-append="#" class="input-lg">  @Html.ValidationMessageFor(model => model.Telefono) </td>
+            </tr>
+            <tr>
+                <td style="padding-right:15px;">Email:</td>
+                <td style="padding-top:10px;"><input style="width:400px;" type="text" name="Correo" data-role="input" data-append="#" class="input-lg"> @Html.ValidationMessageFor(model => model.Correo) </td>
+            </tr>            
+            <tr>
+                <td style="padding-right:15px;">Cargo:</td>
+                <td style="padding-top:10px;"><input style="width:400px;" type="text" name="Cargo" data-role="input" data-append="#" class="input-lg"> @Html.ValidationMessageFor(model => model.Cargo) </td>
+            </tr>            
         </table><br />
         <div class="form-group">
-            <button class="button success">Registrar</button>
+            <button type="submit" class="button success">Registrar</button>
             <input type="button" class="button" value="Cancel">
         </div>
     </form>
 
 </div>
+
