--- a/MetroUIPrueba2/Areas/Gerencia/Views/Empleado/Index.cshtml
+++ b/MetroUIPrueba2/Areas/Gerencia/Views/Empleado/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<MetroUIPrueba2.Models.Empleado>
 @{
-    ViewBag.Title = "Intranet";
+    ViewBag.Title = "Index";
     Layout = "~/Areas/Gerencia/Views/Shared/_IntranetLayoutGerencia.cshtml";
 }
 
@@ -13,11 +13,6 @@
         border: 1px solid green;
         padding: 50px;
         position: relative;
-    }
-
-    #btn_nuevo {
-        margin-bottom: 20px;
-        margin-left: 10px;
     }
 
     .user_session {
@@ -43,10 +38,8 @@
 </div>
 <div class="container" id="principal">
     <div class="div-img"><img style="width:50px; height:50px;" src="~/pics/intranet/listar.jpg"></div>
-    <div style="display:flex; flex-direction:row; align-items:baseline; justify-content:space-between">
-        <h3>Lista de Empleados</h3>
-        <a id="btn_nuevo" href="@Url.Action("Create","Empleado")" class="button primary rounded"><span class="mif-add icon">Nuevo</span></a>
-    </div>    
+    <h3>Lista de Empleados</h3>
+    <a id="btn_nuevo" href="@Url.Action("Create","Empleado")" class="button primary rounded"><span class="mif-add icon">Nuevo</span></a>
     <hr />
     <table class="table compact row-hover">
         <thead>
@@ -62,20 +55,19 @@
         <tbody>
             @foreach (MetroUIPrueba2.Models.Empleado e in Model)
             {
-            <tr>
-                <td>@e.Id</td>
-                <td>@e.Nombres</td>
-                <td>@e.Apellidos</td>
-                <td>@e.Rut</td>
-                <td>@e.Cargo</td>
-                <td>
-                    <a href="@Url.Action("View","Empleado", new { id = e.Id })">Ver/</a>
-                    <a href="@Url.Action("Edit", "Empleado", new {id = e.Id })">Editar</a>
-                </td>
-            </tr>
+                <tr>
+                    <td>@e.Id</td>
+                    <td>@e.Nombres</td>
+                    <td>@e.Apellidos</td>
+                    <td>@e.Rut</td>
+                    <td>@e.Cargo</td>
+                    <td>
+                        <a href="@Url.Action("View","Empleado", new { id = e.Id })">Ver/</a>
+                        <a href="@Url.Action("Edit", "Empleado", new {id=e.Id })">Editar</a>
+                    </td>
+                </tr>
             }
         </tbody>
     </table>
 
 </div>
-
