--- a/MetroUIPrueba2/Areas/Gerencia/Views/Producto/Index.cshtml
+++ b/MetroUIPrueba2/Areas/Gerencia/Views/Producto/Index.cshtml
@@ -1,23 +1,18 @@
-﻿@{
-    ViewBag.Title = "Intranet";
+﻿@model IEnumerable<MetroUIPrueba2.Models.Producto>
+@{
+    ViewBag.Title = "Index";
     Layout = "~/Areas/Gerencia/Views/Shared/_IntranetLayoutGerencia.cshtml";
 }
-
 
 <style>
     #principal {
         width: 900px;
         height: auto;
         top: 50%;
-        margin-top: 60px;
+        margin-top: 30px;
         border: 1px solid green;
         padding: 50px;
         position: relative;
-    }
-
-    #btn_nuevo {
-        margin-bottom: 20px;
-        margin-left: 10px;
     }
 
     .user_session {
@@ -31,77 +26,65 @@
         .user_session h6 {
             color: blue;
         }
+
     .div-img {
         display: flex;
         align-items: center;
         justify-content: center;
     }
+
+    #btn_nuevo {
+        margin-bottom: 20px;
+        margin-left: 10px;
+    }
 </style>
+
 
 <div class="user_session">
     <h6>Usuario: Juan Perez</h6>
 </div>
 
+
+
 <div class="container" id="principal">
     <div class="div-img"><img style="width:50px; height:50px;" src="~/pics/intranet/listar.jpg"></div>
     <div style="display:flex; flex-direction:row; align-items:baseline; justify-content:space-between">
         <h3>Lista de Productos</h3>
-        <a id="btn_nuevo" href="@Url.Action("Nuevo","Producto")" class="button primary rounded"><span class="mif-add icon">Nuevo</span></a>
+        <a id="btn_nuevo" href="/Producto/Create" class="button primary rounded"><span class="mif-add icon">Nuevo</span></a>
     </div>
     <hr />
-    <table class="table compact">
+    <table class="table compact row-hover">
         <thead>
             <tr>
                 <th>#</th>
-                <th>Usuario</th>
                 <th>Codigo</th>
-                <th>Ingreso</th>
-                <th>Valoracion</th>
-                <th>Descripción</th>
+                <th>Fecha</th>
+                <th>Precio</th>
+                <th>Imagen</th>
+                <th>Descripcion</th>
+                <th>Estado</th>
                 <th>Acciones</th>
             </tr>
         </thead>
         <tbody>
-            <tr>
-                <td>1</td>
-                <td>User-01</td>
-                <td>PD-19</td>
-                <td>20-02-2018</td>
-                <td>$ 650.000</td>
-                <td>La descripcion...</td>
-                <td>
-                    <a href="@Url.Action("Ver","Producto", new { id = 1 })">Ver/</a>
-                    <a href="@Url.Action("Editar","Producto", new { id = 1 })">Editar</a>
-                </td>
-            </tr>
-            <tr>
-                <td>2</td>
-                <td>User-05</td>
-                <td>PD-360</td>
-                <td>30-03-2020</td>
-                <td>$ 450.000</td>
-                <td>La descripcion2...</td>
-                <td>
-                    <a href="@Url.Action("Ver","Producto", new { id = 1 })">Ver/</a>
-                    <a href="@Url.Action("Editar","Producto", new { id = 1 })">Editar</a>
-                </td>
-            </tr>
-            <tr>
-                <td>3</td>
-                <td>User-01</td>
-                <td>PD-05</td>
-                <td>29-02.2018</td>
-                <td>$ 200.000</td>
-                <td>La descripcion3...</td>
-                <td>
-                    <a href="@Url.Action("Ver","Producto", new { id = 1 })">Ver/</a>
-                    <a href="@Url.Action("Editar","Producto", new { id = 1 })">Editar</a>
-                </td>
-            </tr>
+            @foreach (MetroUIPrueba2.Models.Producto p in Model)
+            {
+                <tr>
+                    <td>@p.Id</td>
+                    <td>@p.Codigo</td>
+                    <td>@p.Fecha</td>
+                    <td>@p.Precio</td>
+                    <td>@p.Imagen</td>
+                    <td>@p.Descripcion</td>
+                    <td>@p.Estado</td>
+
+                    <td>
+                        <a href="@Url.Action("View", "Producto", new { id = p.Id })">Ver</a>
+                    </td>
+                </tr>
+            }
         </tbody>
     </table>
 
 </div>
-
-
 
