--- a/MetroUIPrueba2/Areas/Gerencia/Views/Proveedor/Index.cshtml
+++ b/MetroUIPrueba2/Areas/Gerencia/Views/Proveedor/Index.cshtml
@@ -1,5 +1,6 @@
-﻿@{
-    ViewBag.Title = "Intranet";
+﻿@model IEnumerable<MetroUIPrueba2.Models.Proveedor>
+@{
+    ViewBag.Title = "Index";
     Layout = "~/Areas/Gerencia/Views/Shared/_IntranetLayoutGerencia.cshtml";
 }
 
@@ -14,11 +15,6 @@
         position: relative;
     }
 
-    #btn_nuevo {
-        margin-bottom: 20px;
-        margin-left: 10px;
-    }
-
     .user_session {
         margin-top: 3px;
         margin-left: 5px;
@@ -31,7 +27,10 @@
             color: blue;
         }
 
-     
+    #btn_nuevo {
+        margin-bottom: 20px;
+        margin-left: 10px;
+    }
 
     .div-img {
         display: flex;
@@ -39,6 +38,7 @@
         justify-content: center;
     }
 </style>
+
 <div class="user_session">
     <h6>Usuario: Juan Perez</h6>
 </div>
@@ -49,58 +49,43 @@
     <div class="div-img"><img style="width:50px; height:50px;" src="~/pics/intranet/listar.jpg"></div>
     <div style="display:flex; flex-direction:row; align-items:baseline; justify-content:space-between">
         <h3>Lista de Proveedores</h3>
-        <a id="btn_nuevo" href="@Url.Action("Nuevo","Proveedor")" class="button primary rounded"><span class="mif-add icon">Nuevo</span></a>
-    </div>   
+        <a id="btn_nuevo" href="@Url.Action("Create","Proveedor")" class="button primary rounded"><span class="mif-add icon">Nuevo</span></a>
+    </div>
     <hr />
     <table class="table compact row-hover">
         <thead>
             <tr>
+                <th>Id</th>
                 <th>Razon</th>
-
+                <th>Rut</th>
                 <th>Dirección</th>
+                <th>Teléfono</th>
                 <th>Email</th>
-                <th>Categoria</th>
+                <th>Contacto</th>
+                <th>Comuna</th>
                 <th>Acciones</th>
             </tr>
         </thead>
         <tbody>
-            <tr>
-                <td>Empresa de Pinturas S.A</td>
+            @foreach (MetroUIPrueba2.Models.Proveedor pr in Model)
+            {
+                <tr>
 
-                <td>Los Avellanos # 675</td>
-                <td>ep@email.com</td>
-                <td>Pinturas</td>
-                <td>
-                    <a href="@Url.Action("Ver","Proveedor", new { id = 1 })">Ver/</a>
-                    <a href="@Url.Action("Editar", "Proveedor", new {id=1 })">Editar</a>
-                </td>
-            </tr>
-            <tr>
-                <td>Prodema S.A</td>
-
-                <td>Padre Lorenzo Eiting #5893</td>
-                <td>prodema@email.com</td>
-                <td>Materia Prima</td>
-                <td>
-                    <a href="@Url.Action("Ver","Proveedor", new { id = 1 })">Ver/</a>
-                    <a href="@Url.Action("Editar", "Proveedor", new {id=1 })">Editar</a>
-                </td>
-            </tr>
-            <tr>
-                <td>Gretsch-Unitas</td>
-
-                <td> Camino Los Carros #1955</td>
-                <td>gu@email.com</td>
-                <td>Cerraduras</td>
-                <td>
-                    <a href="@Url.Action("Ver","Proveedor", new { id = 1 })">Ver/</a>
-                    <a href="@Url.Action("Editar", "Proveedor", new {id=1 })">Editar</a>
-                </td>
-            </tr>
+                    <td>@pr.Id</td>
+                    <td>@pr.Razon</td>
+                    <td>@pr.Rut</td>
+                    <td>@pr.Direccion</td>
+                    <td>@pr.Telefono</td>
+                    <td>@pr.Email</td>
+                    <td>@pr.Contacto</td>
+                    <td>@pr.Comuna</td>
+                    <td>
+                        <a href="@Url.Action("View", "Proveedor", new { id = pr.Id })">Ver/</a>
+                        <a href="@Url.Action("Edit", "Proveedor", new { id = pr.Id })">Editar</a>
+                    </td>
+                </tr>
+            }
         </tbody>
     </table>
-
 </div>
-
-
 
