--- a/MetroUIPrueba2/Areas/Gerencia/Views/Recurso/Edit.cshtml
+++ b/MetroUIPrueba2/Areas/Gerencia/Views/Recurso/Edit.cshtml
@@ -1,23 +1,26 @@
 ﻿@model MetroUIPrueba2.Models.Recurso
 @{
     ViewBag.Title = "Edit";
-    Layout = "~/Areas/Produccion/Views/Shared/_IntranetLayoutInsumos.cshtml";
+    Layout = "~/Areas/Gerencia/Views/Shared/_IntranetLayoutGerencia.cshtml";
 }
 
 <style>
     #principal {
         width: 800px;
-        height: 450px;
+        height: 650px;
         top: 50%;
-        margin-top: 60px;
+        margin-top: 45px;
         border: 1px solid green;
-        padding-top: 30px;
-        padding-left: 50px;
-        padding-right: 50px;
+        padding-top: 10px;
+        padding-left: 60px;
         position: relative;
     }
 </style>
+
 @Html.ValidationSummary()
+<div class="user_session">
+    <h6>Usuario: Juan Perez</h6>
+</div>
 <div class="container" id="principal">
     <h3>Editar Recurso</h3>
     <hr />
@@ -26,7 +29,9 @@
             <tr>
                 <td style="padding-right:15px;">Descripción:</td>
                 <td style="padding:10px;"><input style="width:400px;" type="text" value="@Model.Descripcion" name="Descripcion" data-role="input" data-append="" class="input-lg"></td>
-            </tr>            
+            </tr>
+            <tr>
+
             <tr>
                 <td style="padding-right:15px;">UMedida</td>
                 <td style="padding:10px;">
@@ -36,8 +41,10 @@
         </table><br />
         <div class="form-group">
             <button type="submit" class="button success">Actualizar</button>
-            <input  type="button" class="button" value="Cancel">
+            <input type="button" class="button" value="Cancel">
         </div>
+
     </form>
+
 </div>
 
