--- a/MetroUIPrueba2/Areas/Gerencia/Views/Shared/_IntranetLayoutGerencia.cshtml
+++ b/MetroUIPrueba2/Areas/Gerencia/Views/Shared/_IntranetLayoutGerencia.cshtml
@@ -26,7 +26,7 @@
 <body>
     <div style="display:flex; flex-direction:row; justify-content:space-between ">
         <ul class="h-menu mega">
-            <li><a href="@Url.Action("Index","Empleado")"><span class="mif-home icon"></span></a></li>
+            <li><a href="/Gerencia/Empleado/Index"><span class="mif-home icon"></span></a></li>
             <li>
                 <a href="#" class="dropdown-toggle"><span class="mif-cart icon"></span> Productos</a>
                 <div class="mega-container" data-role="dropdown">
@@ -44,7 +44,7 @@
                         <li><a href="@Url.Action("Inventario","Recurso")"><span class="mif-database"></span>Inventario</a></li>
                     </ul>
                 </div>
-            </li<span class="mif-database"></span>
+            </li>
             <li>
                 <a href="#" class="dropdown-toggle"><span class="mif-shop icon"></span> Proveedores</a>
                 <div class="mega-container" data-role="dropdown">
