--- a/MetroUIPrueba2/Areas/Gerencia/Views/Empleado/Index.cshtml
+++ b/MetroUIPrueba2/Areas/Gerencia/Views/Empleado/Index.cshtml
@@ -38,8 +38,10 @@
 </div>
 <div class="container" id="principal">
     <div class="div-img"><img style="width:50px; height:50px;" src="~/pics/intranet/listar.jpg"></div>
-    <h3>Lista de Empleados</h3>
-    <a id="btn_nuevo" href="@Url.Action("Create","Empleado")" class="button primary rounded"><span class="mif-add icon">Nuevo</span></a>
+    <div style="display:flex; flex-direction:row; align-items:baseline; justify-content:space-between">
+        <h3>Lista de Empleados</h3>
+        <a id="btn_nuevo" href="/Empleado/Create" class="button primary rounded"><span class="mif-add icon">Nuevo</span></a>
+    </div>
     <hr />
     <table class="table compact row-hover">
         <thead>
