--- a/MetroUIPrueba2/Areas/Gerencia/Views/Empleado/View.cshtml
+++ b/MetroUIPrueba2/Areas/Gerencia/Views/Empleado/View.cshtml
@@ -56,7 +56,7 @@
             <div class="cell-sm-9">
                 <input type="text" value="@Model.Nombres" data-role="input"
                        class="mb-1"
-                       data-prepend="<span class='mif-steps'></span>"
+                       data-prepend="<span class='mif-user'></span>"
                        readonly>
             </div>
         </div>
@@ -66,7 +66,7 @@
             <div class="cell-sm-9">
                 <input type="text" value="@Model.Apellidos" data-role="input"
                        class="mb-1"
-                       data-prepend="<span class='mif-steps'></span>"
+                       data-prepend="<span class='mif-user'></span>"
                        readonly>
             </div>
         </div>
