--- a/MetroUIPrueba2/Areas/Gerencia/Views/Producto/View.cshtml
+++ b/MetroUIPrueba2/Areas/Gerencia/Views/Producto/View.cshtml
@@ -5,6 +5,13 @@
 }
 
 <style>
+    .login-form {
+        width: 650px;
+        height: auto;
+        top: 50%;
+        margin-top: -10px;
+    }
+
     #principal {
         width: 900px;
         height: auto;
@@ -16,40 +23,58 @@
     }
 </style>
 
-<br />
+
+
 <div class="container" id="principal">
-    <h3> Ver Producto</h3>
+    <h3>Ver Producto</h3>
     <hr />
     <form class="bg-white p-6 mx-auto border bd-default win-shadow">
         <table>
             <tr>
                 <td style="padding-right:15px;">Codigo Producto:</td>
-                <td style="padding-top:10px;">
-                    <input style="width:400px;" type="text" data-role="input" value="@Model.Codigo" disabled="disabled" class="input-lg">
-                </td>
+                <td style="padding-top:10px;"><input style="width:400px;" type="text" name="Codigo" value="@Model.Codigo" data-role="input" data-append="<span class='mif-blocked'></span>" class="input-lg" readonly></td>
             </tr>
-
             <tr>
                 <td style="padding-right:15px;">Ingreso:</td>
-                <td style="padding-top: 10px;"><input style="width:347px;" type="text" data-role="input" class="input-lg" value="@Model.Fecha" disabled="disabled" /></td>
+                <td style="padding-top: 10px;"><input style="width:347px;" type="text" name="Fecha" value="@Model.Fecha" data-role="input" data-append="<span class='mif-blocked'></span>" class="input-lg" readonly /></td>
             </tr>
-
             <tr>
                 <td style="padding-right:15px;">Valoración:</td>
-                <td style="padding-top:10px;"><input style="width:400px;" type="text" data-role="input" value="@Model.Precio" disabled="disabled" class="input-lg"></td>
+                <td style="padding-top:10px;"><input style="width:400px;" type="text" name="Precio" value="@Model.Precio" onkeyup="format(this);" data-role="input" data-append="<span class='mif-blocked'></span>" class="input-lg" readonly></td>
             </tr>
-
+            <tr>
+                <td style="padding-right:15px;">Imagen:</td>
+                <td style="padding-top:10px;"><input style="width:400px;" type="text" name="Imagen" value="@Model.Imagen" data-role="input" data-append="<span class='mif-blocked'></span>" class="input-lg" readonly></td>
+            </tr>
             <tr>
                 <td style="padding-right:15px;">Descripción:</td>
-                <td style="padding-top:10px;"><input style="width:400px;" type="text" data-role="input" value="@Model.Descripcion" disabled="disabled" class="input-lg"></td>
+                <td style="padding-top:10px;"><input style="width:400px;" type="text" name="Descripcion" value="@Model.Descripcion" data-role="input" data-append="<span class='mif-blocked'></span>" class="input-lg" readonly></td>
             </tr>
             <tr>
                 <td style="padding-right:15px;padding-top:20px;">Estado:</td>
-                <td style="padding-top:10px;"><input style="width:400px;" type="text" data-role="input" value="@Model.Estado" disabled="disabled" class="input-lg"></td>
+                <td>
+                    <input style="width:400px;" type="text" name="Descripcion" value="@Model.Estado" data-role="input" data-append="<span class='mif-blocked'></span>" class="input-lg" readonly>
+
+                </td>
             </tr>
         </table><br />
-
     </form>
 
 </div>
+<script type="text/javascript">
+
+    function format(input) {
+        var num = input.value.replace(/\./g, '');
+        if (!isNaN(num)) {
+            num = num.toString().split('').reverse().join('').replace(/(?=\d*\.?)(\d{3})/g, '$1.');
+            num = num.split('').reverse().join('').replace(/^[\.]/, '');
+            input.value = num;
+        }
+
+        else {
+            alert('Solo se permiten numeros');
+            input.value = input.value.replace(/[^\d\.]*/g, '');
+        }
+    }
+</script>
 
