--- a/MetroUIPrueba2/Areas/Gerencia/Views/Recurso/Index.cshtml
+++ b/MetroUIPrueba2/Areas/Gerencia/Views/Recurso/Index.cshtml
@@ -42,19 +42,22 @@
     <h6>Usuario: Juan Perez</h6>
 </div>
 <div class="container" id="principal">
+    <div class="div-img"><img style="width:50px; height:50px;" src="~/pics/intranet/listar.jpg"></div>
     <div style="display:flex; flex-direction:row; align-items:baseline; justify-content:space-between">
-        <h3>Lista de Recursos</h3>
-        <a id="btn_nuevo" href="@Url.Action("Create","Recurso")" class="button primary rounded"><span class="mif-add icon">Nuevo</span></a>
+        <h3>Lista de Insumo</h3>
+        <a id="btn_nuevo" href="@Url.Action("Create","Insumo")" class="button primary rounded"><span class="mif-add icon">Nuevo</span></a>
     </div>
     <hr />
-    <table class="table compact">
+    <table class="table compact row-hover">
         <thead>
             <tr>
                 <th>#</th>
                 <th>Descripcion</th>
-                <th>Unidad Medida</th>
+                <th>Unidad Medida</th>    
+                <th>Acciones</th>
             </tr>
         </thead>
+        <tbody>
         <tbody>
             @foreach (MetroUIPrueba2.Models.Recurso r in Model)
             {
@@ -67,8 +70,7 @@
                     </td>
                 </tr>
             }
-        </tbody>
+        </tbody>        
     </table>
 
 </div>
-
