Mejoras en las areas Insumo y Produccion
Se han hecho mejoras de la apariencia y se han revisado el correcto funcionamiento de las validaciones y de los componentes del CRUD de estas 2 areas.

--- a/MetroUIPrueba2/Areas/Insumo/Views/Recurso/Index.cshtml
+++ b/MetroUIPrueba2/Areas/Insumo/Views/Recurso/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<MetroUIPrueba2.Models.Recurso>
 @{
     ViewBag.Title = "Intranet";
-    Layout = "~/Areas/Produccion/Views/Shared/_IntranetLayoutInsumos.cshtml";
+    Layout = "~/Areas/Insumo/Views/Shared/_IntranetLayoutInsumo.cshtml";
 }
 
 <style>
@@ -42,7 +42,8 @@
                     <td>@r.Descripcion</td>
                     <td>@r.Umedida</td>                    
                     <td>
-                        <a href="@Url.Action("View","Recurso", new { id = r.Id })">Ver</a>
+                        <a href="@Url.Action("View","Recurso", new { id = r.Id })">Ver/</a>
+                        <a href="@Url.Action("Edit","Recurso", new { id = r.Id })">Editar</a>
                     </td>
                 </tr>
             }
