--- a/MetroUIPrueba2/Areas/Insumo/Views/Recurso/Edit.cshtml
+++ b/MetroUIPrueba2/Areas/Insumo/Views/Recurso/Edit.cshtml
@@ -1,38 +1,46 @@
 ﻿@model MetroUIPrueba2.Models.Recurso
 @{
     ViewBag.Title = "Edit";
-    Layout = "~/Areas/Insumo/Views/Shared/_IntranetLayoutInsumos.cshtml";
+    Layout = "~/Areas/Insumo/Views/Shared/_IntranetLayoutInsumo.cshtml";
 }
 
 <style>
     #principal {
         width: 800px;
-        height: 450px;
+        height: auto;
         top: 50%;
-        margin-top: 60px;
+        margin-top: 45px;
         border: 1px solid green;
-        padding-top: 30px;
-        padding-left: 50px;
-        padding-right: 50px;
+        padding-top: 10px;
+        padding-left: 60px;
         position: relative;
     }
 </style>
 
+<div class="user_session">
+    <h6>Usuario: Juan Perez</h6>
+</div>
 <div class="container" id="principal">
     <h3>Editar Recurso</h3>
     <hr />
-    <form class="bg-white p-6 mx-auto border bd-default win-shadow">
+    <form class="bg-white p-6 mx-auto border bd-default win-shadow" method="POST" action="@Url.Action("Edit","Recurso", new { id = Model.Id })">
         <table>
-            <tr><td style="padding-right:15px;">Descripción:</td>
-            <td style="padding:10px;"><input style="width:400px;" type="text" value="@Model.Descripcion" data-role="input" data-append="" class="input-lg"></td></tr>
+            <tr>
+                <td style="padding-right:15px;">Descripción:</td>
+                <td style="padding:10px;">
+                    <input style="width:400px;" type="text" value="@Model.Descripcion" name="Descripcion" data-role="input" data-append="" class="input-lg">
+                    @Html.ValidationMessageFor(model => model.Descripcion)
+                </td>
+            </tr>
             <tr>
 
             <tr>
                 <td style="padding-right:15px;">UMedida</td>
                 <td style="padding:10px;">
-                    <input style="width:400px;" type="text" value="@Model.Umedida" data-role="input" data-append="" class="input-lg">
-                </td>          
-            </tr>           
+                    <input style="width:400px;" type="text" value="@Model.Umedida" name="UMedida" data-role="input" data-append="" class="input-lg">
+                    @Html.ValidationMessageFor(model => model.Umedida)
+                </td>
+            </tr>
         </table><br />
         <div class="form-group">
             <button type="submit" class="button success">Actualizar</button>
