--- a/MetroUIPrueba2/Areas/Produccion/Views/Recurso/Create.cshtml
+++ b/MetroUIPrueba2/Areas/Produccion/Views/Recurso/Create.cshtml
@@ -43,7 +43,6 @@
         position: relative;
     }
 </style>
-@Html.ValidationSummary()
 <div class="container" id="principal">
     <h3>Nuevo Recurso</h3>
     <hr />
@@ -51,13 +50,17 @@
         <table>
             <tr>
                 <td style="padding-right:15px;">Descripción:</td>
-                <td style="padding:10px;"><input style="width:400px;" type="text" data-role="input" name="Descripcion" data-append="" class="input-lg"></td>
+                <td style="padding:10px;">
+                    <input style="width:400px;" type="text" data-role="input" name="Descripcion" data-append="" class="input-lg">
+                    @Html.ValidationMessageFor(model => model.Descripcion)
+                </td>
             </tr>
 
             <tr>
                 <td style="padding-right:15px;">UMedida</td>
                 <td style="padding:10px;">
                     <input style="width:400px;" type="text" data-role="input" name="UMedida" data-append="" class="input-lg">
+                    @Html.ValidationMessageFor(model => model.Umedida)
                 </td>
             </tr>
         </table><br />
